Implement WMSDbContext and configure Entity Type Configuration for Storage Aggregate in Infrastructure project.

--- a/WMS.Practice.Infrastructure/WMS.Practice.Infrastructure.csproj
+++ b/WMS.Practice.Infrastructure/WMS.Practice.Infrastructure.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.23" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.23" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WMS.Practice.Domain\WMS.Practice.Domain.csproj" />
   </ItemGroup>
 
